# pysfbox

./: .gitignore  CITATION.cff  NOTICE  README.md  REFERENCE.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pysfbox/: __init__.py  __main__.py  inputreader.py  lattice.py  latticend.py  model.py  output.py  reactions.py  runner.py  sfnewton.py  system.py
tests/: Two_brushes_interactingSurfaceBC.kal  adsorption_small.in  adsorption_small.kal  adsorption_small.pro  branched_brackets.in  branched_brackets.kal  branched_brackets.pro  branched_comb.in  branched_comb.kal  branched_comb.pro  branched_dendrimer.in  branched_dendrimer.kal  branched_dendrimer.pro  branched_star.in  branched_star.kal  branched_star.pro  brush2d_cylindrical.in  brush2d_cylindrical.kal  brush2d_cylindrical.pro  brush2d_flat.in  brush2d_flat.kal  brush2d_flat.pro  brush3d_flat.in  brush3d_flat.kal  brush3d_flat.pro  brush_in_good_solvent.kal  brush_in_theta_solvent.kal  charged_cylinder.in  charged_cylinder.pro  charged_nlayers_scan.in  charged_nlayers_scan.kal  charged_nlayers_scan_0.pro  charged_nlayers_scan_1.pro  charged_nlayers_scan_2.pro  charged_sphere.in  charged_sphere.pro  charged_sphere_fjc.in  charged_sphere_fjc.pro  charged_weak_sphere.in  charged_weak_sphere.pro  (+38 more)
